--- a/src/templates/dialog/mystic-act.hbs
+++ b/src/templates/dialog/mystic-act.hbs
@@ -65,6 +65,35 @@
               <option {{#if (is "eq" this.selectedSpell.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'macros.combat.dialog.spellGrade.arcane.title'}}</option>
             {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
+            {{#if (and (is "gt" this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 0) (is "eq" this.selectedSpell.combatType 'attack'))}}
+              {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+                title=(localize 'anima.ui.mystic.metamagics.offensiveExpertise.title')
+                inputName='selectedSpell.metamagics.offensiveExpertise'
+              }}
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 0)}}selected{{/if}} value='0'>0</option>
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 10)}}selected{{/if}} value='10'>10</option>
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 20)}}selected{{/if}} value='20'>20</option>
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 30)}}selected{{/if}} value='30'>30</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 40)}}selected{{/if}} value='40'>40</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 50)}}selected{{/if}} value='50'>50</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.offensiveExpertise 60)}}selected{{/if}} value='60'>60</option>{{/if}}
+              {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+            {{/if}}
+            {{#if (and (is "gt" this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 0) (is "eq" this.selectedSpell.combatType 'defense'))}}
+              {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+                title=(localize 'anima.ui.mystic.metamagics.defensiveExpertise.title')
+                inputName='selectedSpell.metamagics.defensiveExpertise'
+              }}
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 0)}}selected{{/if}} value='0'>0</option>
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 10)}}selected{{/if}} value='10'>10</option>
+                <option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 20)}}selected{{/if}} value='20'>20</option>
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 30)}}selected{{/if}} value='30'>30</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 40)}}selected{{/if}} value='40'>40</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 50)}}selected{{/if}} value='50'>50</option>{{/if}}
+                {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.defensiveExpertise 60)}}selected{{/if}} value='60'>60</option>{{/if}}
+              {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+            {{/if}}
+
             {{>
             "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
               title=(localize "macros.mysticAct.dialog.zeonCost.title")
