--- a/src/templates/dialog/new-supernatural-shield/parts/new-mystic-shield.hbs
+++ b/src/templates/dialog/new-supernatural-shield/parts/new-mystic-shield.hbs
@@ -19,10 +19,41 @@
 
     {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
       title=(localize 'dialogs.castSpell.title')
-      inputName='new.mysticShield.castSpell'
+      inputName='data.mystic.castSpell'
     }}
-      <option value='accumulated'>{{localize 'dialogs.castSpell.accumulated.title'}}</option>
-      <option value='prepared'>{{localize 'dialogs.castSpell.prepared.title'}}</option>
-      <option value='innate'>{{localize 'dialogs.castSpell.innate.title'}}</option>
-      <option {{#if (is "eq" this.data.mystic.castOverride true)}}selected{{/if}} value='override'>{{localize 'dialogs.castSpell.override.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.castSpell 'accumulated')}}selected{{/if}} value='accumulated'>{{localize 'dialogs.castSpell.accumulated.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.castSpell 'prepared')}}selected{{/if}} value='prepared'>{{localize 'dialogs.castSpell.prepared.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.castSpell 'innate')}}selected{{/if}} value='innate'>{{localize 'dialogs.castSpell.innate.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.castSpell 'override')}}selected{{/if}} value='override'>{{localize 'dialogs.castSpell.override.title'}}</option>
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+
+    {{#if (is "gt" this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 0)}}
+      {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+        title=(localize 'anima.ui.mystic.metamagics.definedMagicProjection.title')
+        inputName='data.mystic.metamagics.definedMagicProjection'
+      }}
+        <option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 0)}}selected{{/if}} value='0'>0</option>
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 0)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 1)}}selected{{/if}} value='1'>120</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 1)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 2)}}selected{{/if}} value='2'>140</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 2)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 3)}}selected{{/if}} value='3'>180</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 3)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 4)}}selected{{/if}} value='4'>240</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 4)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 5)}}selected{{/if}} value='5'>280</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 5)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 6)}}selected{{/if}} value='6'>320</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 6)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.definedMagicProjection 7)}}selected{{/if}} value='7'>440</option>{{/if}}
+      {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+    {{/if}}
+
+    {{#if (and (is "gt" this.data.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 0) (is "neq" this.data.mystic.castSpell 'prepared'))}}
+      {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+        title=(localize 'anima.ui.mystic.metamagics.defensiveExpertise.title')
+        inputName='data.mystic.metamagics.defensiveExpertise'
+      }}
+        <option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 0)}}selected{{/if}} value='0'>0</option>
+        <option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 10)}}selected{{/if}} value='10'>10</option>
+        <option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 20)}}selected{{/if}} value='20'>20</option>
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 30)}}selected{{/if}} value='30'>30</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 40)}}selected{{/if}} value='40'>40</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 50)}}selected{{/if}} value='50'>50</option>{{/if}}
+        {{#if (is "gt" ../this.data.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.data.mystic.metamagics.defensiveExpertise 60)}}selected{{/if}} value='60'>60</option>{{/if}}
+      {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+    {{/if}}
