--- a/src/scss/dialog/combat-defense-dialog.scss
+++ b/src/scss/dialog/combat-defense-dialog.scss
@@ -12,6 +12,14 @@
     align-items: center;
   }
 
+  .main-title {
+    position: absolute;
+    top: 0.2rem;
+    color: #ffffff;
+    align-self: center;
+    font-weight: bold;
+  }
+
   .common-group {
     height: 100%;
   }
