--- a/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
+++ b/src/templates/dialog/combat/combat-attack/combat-attack-dialog.hbs
@@ -2,6 +2,7 @@
   {{#> "systems/animabf/templates/common/ui/group.hbs"
     class="attack-values"
   }}
+  <h3 class="main-title group-header-title">{{this.attacker.token.name}}</h3>
     {{>
     "systems/animabf/templates/common/ui/group-header.hbs"
       title=(concat (localize 'macros.combat.dialog.attacking.title') this.defender.token.name)
