--- a/src/scss/dialog/confirmation-prompt-dialog.scss
+++ b/src/scss/dialog/confirmation-prompt-dialog.scss
@@ -14,6 +14,7 @@
     padding: 1rem;
     margin-bottom: 2.5rem;
     width: 100%;
+    max-width: 50rem;
     font-size: 1.125rem;
     text-align: center;
   }
