update -  rename wrong english properties

--- a/src/templates/actor/parts/general/parts/body.hbs
+++ b/src/templates/actor/parts/general/parts/body.hbs
@@ -18,7 +18,7 @@
           disabled=true
           inputType="text"
           inputName=""
-          inputValue=(localize (concat 'macros.combat.dialog.targetedAttack.' @key '.title'))
+          inputValue=(localize (concat 'macros.combat.dialog.directedAttack.' @key '.title'))
         }}
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
