new - damageBarrier damageReduction damageEnergy

--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -24,7 +24,7 @@
       margin-top: 0.75rem;
 
       display: grid;
-      grid-template-columns: 3fr 1fr 1fr;
+      grid-template-columns: 3fr 1fr 1fr 1fr;
       grid-column-gap: 0.1rem;
 
       .name .input-container {
