--- a/src/scss/items/psychic-power/psychic-power.scss
+++ b/src/scss/items/psychic-power/psychic-power.scss
@@ -141,7 +141,7 @@
         .input {
           height: 1.5rem;
         }
-        .critic{
+        .damage-energy,.critic{
           .input {
             height: 1.5rem;
             padding: 0.15rem 0.5rem;
