--- a/src/scss/items/spell/spell.scss
+++ b/src/scss/items/spell/spell.scss
@@ -161,7 +161,7 @@
         padding: 0.15rem 0.5rem;
       }
 
-      .has-daily-maintenance {
+      .damage-energy,.has-daily-maintenance {
         .input-container {
           width: 1rem;
         }
