--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -71,5 +71,12 @@
       inputName="system.general.modifiers.criticLevel.value"
       inputValue=system.general.modifiers.criticLevel.value
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="damage-barrier"
+      title=(localize "anima.ui.combat.baseValues.damageBarrier.title")
+      inputName="system.general.modifiers.damageBarrier.value"
+      inputValue=system.general.modifiers.damageBarrier.value
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
