--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -424,6 +424,20 @@
                   }}
                 </div>
               {{/if}}
+            {{else}}
+              {{#if (and (is "gt" this.defender.actor.system.general.modifiers.damageBarrier.value 0) (is "neq" this.attacker.result.values.damageEnergy true))}}
+              <div class="supernatural-shield">
+                  {{>
+                  "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+                    class="damage-barrier"
+                    title=(concat (localize 'macros.combat.dialog.damageBarrier.title') " " this.defender.actor.system.general.modifiers.damageBarrier.value)
+                    inputType="checkbox"
+                    disabled=false
+                    inputName="defender.damageBarrier"
+                    inputValue=(is 'eq' this.defender.damageBarrier true)
+                  }}
+                </div>
+              {{/if}}
             {{/if}}
 
           {{else}}
