--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -52,6 +52,18 @@
   inputValue=this.attacker.psychic.damageModifier
 }}
 
+<div class='columns'>
+  <div>
+    {{>
+      "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      title=(localize 'macros.combat.dialog.areaAttack.title')
+      inputType="checkbox"
+      inputName="attacker.psychic.areaAttack"
+      inputValue=(is 'eq' this.attacker.psychic.areaAttack true)
+    }}
+  </div>
+</div>
+
 {{#if (and (is 'gt' this.attacker.actor.system.psychic.psychicPoints.value 0) (is 'eq' this.attacker.actor.system.psychic.psychicSettings.fatigueResistance false))}}
 <div class='columns'>
   <div>
