--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -18,3 +18,4 @@
 @import 'dialog/confirmation-prompt-dialog';
 @import 'dialog/new-supernatural-shield';
 @import 'dialog/mystic-act-dialog';
+@import 'dialog/mystic-cast-dialog';
