new - secondaries search bar

--- a/src/templates/actor/parts/secondaries/secondaries.hbs
+++ b/src/templates/actor/parts/secondaries/secondaries.hbs
@@ -1,3 +1,6 @@
+<div class="search-secondaries">
+  <input type="search" id="search">
+</div>
 <div class="secondaries">
   <div>
     {{> "systems/animabf/templates/actor/parts/secondaries/parts/athletics.hbs"}}
