--- a/src/scss/actor/parts/secondaries.scss
+++ b/src/scss/actor/parts/secondaries.scss
@@ -1,15 +1,24 @@
 @import '../../variable';
 
+.search-secondaries {
+  justify-content: center;
+  margin-inline: 25%;
+}
+
 .secondaries {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 1rem;
+  margin-top: 0.75rem;
 
   div .common-group {
     &:first-child {
       margin-top: 0;
     }
-
-    margin-top: 0.75rem;
+    margin-top: 0.5rem;
+    .searched {
+      color: white;
+      text-shadow: 0 0 8px black;
+    }
   }
 }
