--- a/src/templates/dialog/mystic-cast.hbs
+++ b/src/templates/dialog/mystic-cast.hbs
@@ -66,19 +66,21 @@
   {{/unless}}
 
   {{#if (is "gt" this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 0)}}
-    {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
-      title=(localize 'anima.ui.mystic.metamagics.definedMagicProjection.title')
-      inputName='selectedSpell.metamagics.definedMagicProjection'
-    }}
-      <option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 0)}}selected{{/if}} value='0'>0</option>
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 0)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 1)}}selected{{/if}} value='1'>120</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 2)}}selected{{/if}} value='2'>140</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 3)}}selected{{/if}} value='3'>180</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 3)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 4)}}selected{{/if}} value='4'>240</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 4)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 5)}}selected{{/if}} value='5'>280</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 5)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 6)}}selected{{/if}} value='6'>320</option>{{/if}}
-      {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 6)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 7)}}selected{{/if}} value='7'>440</option>{{/if}}
-    {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+    {{#unless (is "eq" this.selectedSpell.metamagics.definedMagicProjection undefined)}}
+      {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+        title=(localize 'anima.ui.mystic.metamagics.definedMagicProjection.title')
+        inputName='selectedSpell.metamagics.definedMagicProjection'
+      }}
+        <option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 0)}}selected{{/if}} value='0'>0</option>
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 0)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 1)}}selected{{/if}} value='1'>120</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 1)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 2)}}selected{{/if}} value='2'>140</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 2)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 3)}}selected{{/if}} value='3'>180</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 3)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 4)}}selected{{/if}} value='4'>240</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 4)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 5)}}selected{{/if}} value='5'>280</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 5)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 6)}}selected{{/if}} value='6'>320</option>{{/if}}
+        {{#if (is "gt" ../this.actor.system.mystic.magicLevel.metamagics.arcanePower.definedMagicProjection.sphere 6)}}<option {{#if (is "eq" ../this.selectedSpell.metamagics.definedMagicProjection 7)}}selected{{/if}} value='7'>440</option>{{/if}}
+      {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+    {{/unless}}
   {{/if}}
 
   {{#if (and (is "gt" this.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 0) (is "eq" this.selectedSpell.combatType "defense"))}}
